Fix background repeat on mobile

--- a/src/scss/common/_theme.scss
+++ b/src/scss/common/_theme.scss
@@ -16,7 +16,7 @@ $common-themes: (
                 color-background: #1c1c1c,
                 navbar-background: #15151577,
                 navbar-item-background-hover: #2d2d2d,
-                navbar-mobile-background: #18181833,
+                navbar-mobile-background: #181818cc,
                 input-background: rgba(78, 78, 78, 0.2),
                 input-border: none,
                 select-background: rgba(78, 78, 78, 0.2),
