--- a/src/scss/pages/ChartPage.scss
+++ b/src/scss/pages/ChartPage.scss
@@ -5,11 +5,8 @@
 .chartPage {
   display: flex;
   flex-direction: column;
-  
 
   height: 100%;
-
-  background: linear-gradient(105deg, rgba(86, 63, 255, 0.80), rgba(120, 180, 150, 1) 100%, #418dff);
 
   .latestTextRow {
     padding: 5px;
