--- a/src/scss/pages/SortPage.scss
+++ b/src/scss/pages/SortPage.scss
@@ -5,7 +5,6 @@
 
 
 .sortPage {
-  background: linear-gradient(105deg, rgba(86, 63, 255, 0.80), rgba(120, 180, 150, 1) 100%, #418dff);
   height: 100%;
   display: flex;
   flex-direction: column;
